# advent-of-code-2023

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
benches/: benches.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day_template.rs  lib.rs  main.rs
