[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
default-run = "advent-of-code-2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
pathfinding = "4.4.0"
rayon = "1.8.0"


[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = "fat"
codegen-units = 1

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"
